build frontend for firstpage

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,14 @@
     "jsx": "preserve",
     "incremental": true,
     "paths": {
-      "@/*": ["./src/*"]
+      "@/src/*": ["./src/*"],
+      "@/components/*": ["./components/*"],
+      "@/hooks/*": ["./hooks/*"],
+      "@/utils/*": ["./utils/*"],
+      "@/state/*": ["./state/*"],
+      "@/styles/*": ["./src/styles/*"],
+      "@/types/*": ["./types/*"],
+      "@/libs/*": ["./libs/*"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
