--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@mantine/core": "^6.0.19",
+    "@supabase/auth-helpers-nextjs": "^0.7.4",
     "@tabler/icons-react": "^2.30.0",
     "@types/node": "20.5.0",
     "@types/react": "18.2.20",
