--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@mantine/core": "^6.0.19",
+    "@mantine/dropzone": "^6.0.19",
     "@mantine/form": "^6.0.19",
     "@mantine/notifications": "^6.0.19",
     "@supabase/auth-helpers-nextjs": "^0.7.4",
