--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-horizontal-scrolling-menu": "^4.1.0",
+    "react-infinite-scroller": "^1.2.6",
     "react-responsive-masonry": "^2.1.7",
     "react-timeago": "^7.1.0",
     "tailwindcss": "3.3.3",
@@ -37,6 +38,7 @@
   },
   "devDependencies": {
     "@types/google-map-react": "^2.1.7",
+    "@types/react-infinite-scroller": "^1.2.3",
     "@types/react-responsive-masonry": "^2.1.0"
   }
 }
