--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,7 @@
       "@/utils/*": ["./utils/*"],
       "@/state/*": ["./state/*"],
       "@/styles/*": ["./src/styles/*"],
-      "@/types/*": ["./types/*"],
+      "@/types/*": ["./types/*", "./node_modules/@types"],
       "@/libs/*": ["./libs/*"]
     }
   },
