--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mantine/form": "^6.0.19",
     "@mantine/notifications": "^6.0.19",
     "@supabase/auth-helpers-nextjs": "^0.7.4",
+    "@supabase/auth-helpers-react": "^0.4.2",
     "@tabler/icons-react": "^2.30.0",
     "@types/node": "20.5.0",
     "@types/react": "18.2.20",
@@ -26,6 +27,7 @@
     "eslint-config-next": "13.4.16",
     "google-map-react": "^2.2.1",
     "next": "13.4.16",
+    "next-auth": "^4.23.1",
     "postcss": "8.4.28",
     "react": "18.2.0",
     "react-dom": "18.2.0",
