--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "@types/node": "20.5.0",
     "@types/react": "18.2.20",
     "@types/react-dom": "18.2.7",
+    "airtable": "^0.12.2",
     "autoprefixer": "10.4.15",
+    "axios": "^1.5.0",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.16",
     "google-map-react": "^2.2.1",
