--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "airtable": "^0.12.2",
     "autoprefixer": "10.4.15",
     "axios": "^1.5.0",
+    "cheerio": "^1.0.0-rc.12",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.16",
     "google-map-react": "^2.2.1",
