--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "cheerio": "^1.0.0-rc.12",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.16",
+    "excel4node": "^1.8.2",
+    "exceljs": "^4.3.0",
     "google-map-react": "^2.2.1",
     "next": "13.4.16",
     "next-auth": "^4.23.1",
