--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@fortawesome/fontawesome-svg-core": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@mantine/carousel": "^6.0.21",
     "@mantine/core": "^6.0.19",
     "@mantine/dropzone": "^6.0.19",
     "@mantine/form": "^6.0.19",
@@ -26,6 +27,7 @@
     "autoprefixer": "10.4.15",
     "axios": "^1.5.0",
     "cheerio": "^1.0.0-rc.12",
+    "embla-carousel-autoplay": "^8.0.0-rc14",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.16",
     "excel4node": "^1.8.2",
