--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@supabase/auth-helpers-react": "^0.4.2",
     "@tabler/icons-react": "^2.30.0",
     "@types/node": "20.5.0",
-    "@types/react": "18.2.20",
+    "@types/react": "^18.2.20",
     "@types/react-dom": "18.2.7",
     "airtable": "^0.12.2",
     "autoprefixer": "10.4.15",
@@ -36,7 +36,7 @@
     "next": "13.4.16",
     "next-auth": "^4.23.1",
     "postcss": "8.4.28",
-    "react": "18.2.0",
+    "react": "^18.2.0",
     "react-dom": "18.2.0",
     "react-horizontal-scrolling-menu": "^4.1.0",
     "react-infinite-scroller": "^1.2.6",
